# ios-interact-mcp

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  FULLSCREEN_REMOVAL_SUMMARY.md  README.md  debug_ensure_fullscreen.py  debug_exit_fullscreen.py  debug_menu_click.py  exit_fullscreen.py  ios-interact-server.py  ios_interact_server.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  test_click_only.py  test_fullscreen_error.py  test_ocr_click_direct.py  test_simulator_focus.py  test_windowed_restoration.py  use_keyboard_shortcut.py
docs/: OCRMAC_IMPLEMENTATION_PLAN.md  OSASCRIPT_PLAN.md  architecture.md  development.md
examples/: basic_automation.py  click_text_demo.py  debug_applescript.py  draw_camera_bbox.py  draw_general_bbox.py  draw_general_bbox_adjusted.py
ios_interact_mcp/: __init__.py  __main__.py  gesture_controller.py  interact_types.py  ocr_controller.py  ocr_controller_functional.py  server.py  types.py  xcrun_controller.py
scripts/: install_mcp.sh
tests/: README.md  TEST_COVERAGE.md  __init__.py  check_window_state.py  conftest.py  create_test_image.py  debug_ocr_format.py  debug_toggle_test.py  requirements-test.txt  test_async_functions.py  test_coordinate_flip.py  test_direct_click.py  test_direct_click_debug.py  test_e2e_simulator.py  test_error_handling.py  test_fullscreen.py  test_fullscreen_state.py  test_gesture_functional.py  test_gesture_simulator_e2e.py  test_immutability.py  test_mcp_click_text.py  test_mcp_e2e.py  test_mcp_integration.py  test_ocr_clicks.py  test_ocr_controller.py  test_server.py  (+11 more)
(+11 files in other folders)
