[project]
name = "ios-interact-mcp"
version = "0.1.0"
description = "iOS Interact MCP Server"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
ios-interact-mcp = "ios_interact_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["ios_interact_server.py"]

