[project]
name = "ios-interact-mcp"
version = "0.1.0"
description = "iOS Interact MCP Server"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "ocrmac>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "flake8-tidy-imports>=4.10.0",
    "pyright>=1.1.389",
    "pre-commit>=3.8.0",
]

[project.scripts]
ios-interact-mcp = "ios_interact_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ios_interact_mcp"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
per-file-ignores = "__init__.py:F401,tests/*.py:E402"

[tool.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"